--- a/templates/Default/index.html.twig
+++ b/templates/Default/index.html.twig
@@ -3,6 +3,10 @@
 {% block title %}Json To Class{% endblock %}
 {% block body %}
     <div class="main container mx-auto max-w-lg bg-white p-5 mt-5">
+        <div class="header -ml-5 -mr-5 -mt-5 p-5 bg-orange-300 mb-5">
+            <h1 class="text-3xl font-bold mb-5">JSON TO CLASS</h1>
+            <h2 class="text-1xl">Convert JSON to another entity (class, interface, etc.)</h2>
+        </div>
         {% block content %}{% endblock %}
     </div>
 {% endblock %}
