--- a/templates/Default/page/index.html.twig
+++ b/templates/Default/page/index.html.twig
@@ -2,16 +2,41 @@
 
 {% block content %}
     <div class="header -ml-5 -mr-5 -mt-5 p-5 bg-orange-300 mb-5">
-        <h1 class="text-3xl font-bold mb-5">JSON TO CLASS</h1>    
+        <h1 class="text-3xl font-bold mb-5">JSON TO CLASS</h1>
         <h2 class="text-1xl">Convert JSON to another entity (class, interface, etc.)</h2>
     </div>
 
     <div class="form">
-        <form class="mt-5">
-            <textarea rows="10" class="w-full p-2 border border-gray-300 rounded-md" placeholder="Enter JSON here"></textarea>
-            <button type="submit" class="mt-3 px-4 py-2 bg-blue-500 text-white rounded-md">Convert</button>
-        </form>
+        {{ form_start(form, {'attr': {'class': 'mt-5'}}) }}
+        <div class="mb-4">
+            {{ form_row(form.rootName, {
+                'label': 'Root Name',
+                'label_attr': {
+                    'class': 'block mb-2 text-sm font-medium text-gray-900 dark:text-white'
+                },
+                'attr': {
+                    'class': 'bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500',
+                    'placeholder': 'Root',
+                    'required': 'required'
+                }
+            }) }}
+        </div>
+        <div class="mb-4">
+            {{ form_row(form.jsonInput, {
+                'label': 'JSON Input',
+                'label_attr': {
+                    'class': 'block mb-2 text-sm font-medium text-gray-900 dark:text-white'
+                },
+                'attr': {
+                    'rows': '10',
+                    'class': 'bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500',
+                    'placeholder': 'Enter JSON here',
+                    'required': 'required'
+                }
+            }) }}
+        </div>
+        <button type="submit" class="mt-3 px-4 py-2 bg-orange-500 text-white rounded-md">Convert</button>
+        {{ form_end(form) }}
     </div>
-    
-    
+
 {% endblock %}
