--- a/templates/Default/block/element_table.html.twig
+++ b/templates/Default/block/element_table.html.twig
@@ -13,7 +13,7 @@
                 <a href="{{ path('app_element_single', {
                     slug: element.parsingInstance.slug,
                     id: element.id
-                }) }}">{{ element.name }}</a>
+                }) }}" class="text-orange-500">{{ element.name }}</a>          
             </td>
             <td class="border-b border-gray-300 py-2 text-left">
                 {{ element.type }}
