--- a/templates/Default/page/parsing_instance_single.html.twig
+++ b/templates/Default/page/parsing_instance_single.html.twig
@@ -39,9 +39,20 @@
                 <h2 class="text-2xl font-semibold mb-2">Export</h2>
 
                 {{ form_start(exportForm, {'attr': {'class': 'space-y-4'}}) }}
+
                 {{ form_label(exportForm.exportType, 'Root Name', {'label_attr': {'class': 'block mb-2 text-sm font-medium text-gray-900 dark:text-white'}}) }}
                 {{ form_errors(exportForm.exportType) }}
                 {{ form_widget(exportForm.exportType, {
+                    'attr': {
+                        'class': 'bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500',
+                        'placeholder': 'Root',
+                        'required': 'required'
+                    }
+                }) }}
+
+                {{ form_label(exportForm.prefix, 'Prefix', {'label_attr': {'class': 'block mb-2 text-sm font-medium text-gray-900 dark:text-white'}}) }}
+                {{ form_errors(exportForm.prefix) }}
+                {{ form_widget(exportForm.prefix, {
                     'attr': {
                         'class': 'bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500',
                         'placeholder': 'Root',
